code-samples/example-13-probes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ex13-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ex13-app
  template:
    metadata:
      labels:
        app: ex13-app
    spec:
      volumes:
        - name: wwwdata-volume
          emptyDir:
            sizeLimit: 1Gi

      # initialize the Pod by creating example web content with the hostname
      containers:
      - name: ex13-container
        image: nginxinc/nginx-unprivileged:stable-alpine
        volumeMounts:
        - name: wwwdata-volume
          mountPath: /usr/share/nginx/html
        ports:
        - name: http-default 
          containerPort: 8080

        # probes - manually create and delete the probe files using oc rsh to observe probe behavior
        startupProbe:
          exec:
            command: ["cat", "/tmp/alive"]
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          exec:
            command: ["cat", "/tmp/alive"]
          periodSeconds: 5
          failureThreshold: 2
        readinessProbe:
          exec:
            command: ["cat", "/tmp/ready"]
          periodSeconds: 5
          failureThreshold: 2
