code-samples/example-13-probes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ex13-service
spec:
  selector:
    app: ex13-app
  ports:
    - name: web
      port: 80
      targetPort: http-default
