code-samples/example-13-probes/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ex13-route
  annotations:
    haproxy.router.openshift.io/disable_cookies: "true" 
spec:
  host: ex13.salesdemo.ocpqa.apa.net
  path: /
  to:
    kind: Service
    name: ex13-service
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
